# citest

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
.pytest_cache/v/cache/: lastfailed  nodeids
api/cimisstest/: index.html
api/classifiers/: index.html
api/data-generators/: index.html
api/dataset/: index.html
api/imputers/: index.html
api/kappa/: index.html
citest/: __init__.py  classifier.py  data.py  imputer.py  mi_test.py  simulate.py  test.py  utils.py
citestR/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cran-comments.md
citestR/R/: client.R  install.R  print.R  server.R  zzz.R
citestR/man/: base_req.Rd  calibration_pivot.Rd  check_backend_version.Rd  ci_test.Rd  citestR-package.Rd  clear_venv_path.Rd  compute_kappa.Rd  config_dir.Rd  ensure_server.Rd  find_free_port.Rd  get_json.Rd  get_summary.Rd  has_server.Rd  imputer_r2.Rd  install_backend.Rd  kappa_calibration_table.Rd  load_venv_path.Rd  make_dataset.Rd  make_dataset_parquet.Rd  post_json.Rd  print.citest_result.Rd  print.citest_summary.Rd  save_venv_path.Rd  simulate_data.Rd  start_server.Rd  stop_server.Rd  to_nested_list.Rd  uninstall_backend.Rd  update_backend.Rd
citestR/tests/: testthat.R
citestR/tests/testthat/: helper.R  test-client.R
citestR/vignettes/: getting-started.Rmd
docs/: examples.md  getting-started.md  index.md  methodology.md
docs/api/: cimisstest.md  classifiers.md  data-generators.md  dataset.md  imputers.md  kappa.md
examples/: index.html
getting-started/: index.html
methodology/: index.html
search/: search_index.json
tests/: .gitignore  MAR1_june25 copy.py  MAR1_june25.py  adult.py  adult_imp.py  adult_imp_test.py  adult_june25.py  applied_all.py  applied_template.py  applied_test.py  dgp_simulations.py  kuha_june25.py  mar1_imp_test.py  maytest.py  test_citest.py  test_data.py  test_dgps_smoke.py  test_general_units.py  test_new_impl.py  test_pipeline_shapes.py  test_regressions.py  v4_june25.py
