[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citest"
version = "0.1.1"
authors = [
  { name="Thomas Robinson", email="t.robinson7@lse.ac.uk" },
  { name="Ranjit Lall", email="ranjit.lall@politics.ox.ac.uk" },
]
description = "A conditional independence test for missing data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "pydantic>=2.0",
    "torch>=2.0",
    "MIDAS2>=0.2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MIDASverse/citest"
Issues = "https://github.com/MIDASverse/citest/issues"
