[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citest"
version = "0.3.0"
authors = [
  { name="Thomas Robinson", email="t.robinson7@lse.ac.uk" },
  { name="Ranjit Lall", email="ranjit.lall@politics.ox.ac.uk" },
]
description = "A conditional independence test for missing data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["missing-data", "conditional-independence", "hypothesis-testing", "multiple-imputation", "statistics"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "pydantic>=2.0",
    "torch>=2.0",
    "MIDAS2>=0.2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MIDASverse/citest"
Repository = "https://github.com/MIDASverse/citest"
Issues = "https://github.com/MIDASverse/citest/issues"
Documentation = "https://midasverse.github.io/citest/"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
